IlterisDictionaryEntryVm created and refined demo entries

--- a/IlterisDictionary/Layout/NavMenu.razor
+++ b/IlterisDictionary/Layout/NavMenu.razor
@@ -11,17 +11,17 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Ilteris Home
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Ilteris' Yurt
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="dictionary">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Dictionary
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="meanings">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Meanings
             </NavLink>
         </div>
     </nav>
