--- a/IlterisDictionary/Pages/Meanings.razor
+++ b/IlterisDictionary/Pages/Meanings.razor
@@ -1,57 +1,45 @@
 ﻿@page "/meanings"
-@inject HttpClient Http
-
+@using IlterisDictionary.Pages
+@using IlterisDictionaryLibrary.ViewModels
 <PageTitle>Weather</PageTitle>
 
 <h1>Weather</h1>
 
 <p>This component demonstrates fetching data from the server.</p>
 
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
 else
 {
-    <table class="table">
-        <thead>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Word</th>
+            <th>Meaning</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var entry in _meaningEntryVms)
+        {
             <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
+                <td>
+                    @entry.Word
+                </td>
             </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+            <tr>
+                <td>
+                    <div id="@entry.IlterisDictionaryEntryID.ToString()">
+                        <p>
+                            @entry.Word
+                        </p>
+                        <hr />
+                        <p>
+                            @entry.MeaningDescription
+                        </p>
+                    </div>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
 }
 
-@code {
-    private WeatherForecast[]? forecasts;
 
-    protected override async Task OnInitializedAsync()
-    {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
-    }
-
-    public class WeatherForecast
-    {
-        public DateOnly Date { get; set; }
-
-        public int TemperatureC { get; set; }
-
-        public string? Summary { get; set; }
-
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
-    }
-}
