--- a/IlterisDictionary/Layout/NavMenu.razor
+++ b/IlterisDictionary/Layout/NavMenu.razor
@@ -10,30 +10,19 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="@Helper.Routes.Home" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Ilteris' Yurt
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="dictionary">
+            <NavLink class="nav-link" href="@Helper.Routes.Dictionary">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Dictionary
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="meanings">
+            <NavLink class="nav-link" href="@Helper.Routes.Meanings">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Meanings
             </NavLink>
         </div>
     </nav>
 </div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
