there is no way to store data on hardware yet so we have to deal with more in-between steps for adding new entries to the dictionary. Created "SharedData" for inter-page communication

--- a/IlterisDictionary/Layout/NavMenu.razor
+++ b/IlterisDictionary/Layout/NavMenu.razor
@@ -24,5 +24,26 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Meanings
             </NavLink>
         </div>
+
+        @if (IsDebugActive())
+        {
+            <div>
+                <NavLink class="nav-link" href="@Helper.Routes.Debug">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>Debug
+                </NavLink>
+            </div>
+        }
     </nav>
 </div>
+
+@code
+{
+    private bool IsDebugActive()
+    {
+#if DEBUG
+    return true;
+#elif !DEBUG
+        return false;
+#endif
+    }
+}
